--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -22,14 +22,18 @@ a,
 }
 
 @media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
   #app {
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
   }
+}
+
+td {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+h3 {
+  margin-top: 15px;
 }
