--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -34,5 +34,15 @@ table {
   }
   border-collapse: collapse;
   border-radius: 10px;
+  width: 700px;
+  margin-top: 40px;
 }
 
+.p-inputmask, .p-inputtext {
+  font-size: 25px; 
+  width: 90px;
+}
+
+body {
+  font-size: 25px;
+}
